--- a/StaffFrontend/Views/Product/Create.cshtml
+++ b/StaffFrontend/Views/Product/Create.cshtml
@@ -11,7 +11,6 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="View">
-            @Html.AntiForgeryToken()
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="name" class="control-label"></label>
@@ -27,6 +26,11 @@
                 <label asp-for="price" class="control-label"></label>
                 <input asp-for="price" class="form-control" />
                 <span asp-validation-for="price" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="visible" class="control-label"></label>
+                <input asp-for="visible" class="form-control" />
+                <span asp-validation-for="visible" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
