--- a/StaffFrontend/Views/Product/Delete.cshtml
+++ b/StaffFrontend/Views/Product/Delete.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "View";
 }
 
+<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 <h1>View</h1>
 
 <h3>Are you sure you want to delete this?</h3>
