--- a/StaffFrontend/Views/Product/Edit.cshtml
+++ b/StaffFrontend/Views/Product/Edit.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
+<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 <h1>Edit</h1>
 
 <h4>Product</h4>
