--- a/StaffFrontend/Views/Review/Details.cshtml
+++ b/StaffFrontend/Views/Review/Details.cshtml
@@ -12,22 +12,22 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.reviewid)
+            @Html.DisplayNameFor(model => model.reviewId)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.reviewid)
+            @Html.DisplayFor(model => model.reviewId)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.content)
+            @Html.DisplayNameFor(model => model.reviewContent)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.content)
+            @Html.DisplayFor(model => model.reviewContent)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.rating)
+            @Html.DisplayNameFor(model => model.reviewRating)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.rating)
+            @Html.DisplayFor(model => model.reviewRating)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.hidden)
@@ -36,10 +36,10 @@
             @Html.DisplayFor(model => model.hidden)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.itemid)
+            @Html.DisplayNameFor(model => model.productId)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.itemid)
+            @Html.DisplayFor(model => model.productId)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.createTime)
