--- a/StaffFrontend/Views/Review/Edit.cshtml
+++ b/StaffFrontend/Views/Review/Edit.cshtml
@@ -14,19 +14,19 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group" style="display:none">
-                <label asp-for="reviewid" class="control-label"></label>
-                <input asp-for="reviewid" class="form-control" />
-                <span asp-validation-for="reviewid" class="text-danger"></span>
+                <label asp-for="reviewId" class="control-label"></label>
+                <input asp-for="reviewId" class="form-control" />
+                <span asp-validation-for="reviewId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="content" class="control-label"></label>
-                <input asp-for="content" class="form-control" readonly />
-                <span asp-validation-for="content" class="text-danger"></span>
+                <label asp-for="reviewContent" class="control-label"></label>
+                <input asp-for="reviewContent" class="form-control" readonly />
+                <span asp-validation-for="reviewContent" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="rating" class="control-label"></label>
-                <input asp-for="rating" class="form-control" readonly />
-                <span asp-validation-for="rating" class="text-danger"></span>
+                <label asp-for="reviewRating" class="control-label"></label>
+                <input asp-for="reviewRating" class="form-control" readonly />
+                <span asp-validation-for="reviewRating" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
@@ -34,9 +34,9 @@
                 </label>
             </div>
             <div class="form-group">
-                <label asp-for="itemid" class="control-label"></label>
-                <input asp-for="itemid" class="form-control" readonly />
-                <span asp-validation-for="itemid" class="text-danger"></span>
+                <label asp-for="productId" class="control-label"></label>
+                <input asp-for="productId" class="form-control" readonly />
+                <span asp-validation-for="productId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="createTime" class="control-label"></label>
