--- a/StaffFrontend/Views/_ViewImports.cshtml
+++ b/StaffFrontend/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using StaffFrontend3._1
-@using StaffFrontend3._1.Models
+﻿@using StaffFrontend
+@using StaffFrontend.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
