--- a/StaffFrontend/Views/Shared/_Layout.cshtml
+++ b/StaffFrontend/Views/Shared/_Layout.cshtml
@@ -33,6 +33,10 @@
                     </ul>
                 </div>
             </div>
+            @if (User.Identity.IsAuthenticated)
+            {
+                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a>
+            }
         </nav>
     </header>
     <div class="container">
