--- a/StaffFrontend/Views/Product/Details.cshtml
+++ b/StaffFrontend/Views/Product/Details.cshtml
@@ -39,7 +39,10 @@
             @Html.DisplayNameFor(model => model.Available)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Available)
+            <div class="custom-control custom-switch">
+                <input id="customSwitch1" type="checkbox" class="custom-control-input" asp-for="@Model.Available" disabled />
+                <label for="customSwitch1" class="custom-control-label"></label>
+            </div>
         </dd>
     </dl>
 </div>
