--- a/StaffFrontend/Views/Review/Index.cshtml
+++ b/StaffFrontend/Views/Review/Index.cshtml
@@ -7,7 +7,7 @@
 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 <h1>Index</h1>
 
-<table class="table">
+<table class="table table-dark">
     <thead>
         <tr>
             <th>
