--- a/StaffFrontend/Views/Customer/Index.cshtml
+++ b/StaffFrontend/Views/Customer/Index.cshtml
@@ -19,7 +19,7 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<table class="table table-dark">
     <thead>
         <tr>
             <th>
@@ -63,7 +63,10 @@
                     @Html.DisplayFor(modelItem => item.contact)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.canPurchase)
+                    <div class="custom-control custom-switch">
+                        <input id="customSwitch1" type="checkbox" class="custom-control-input" asp-for="@item.canPurchase" disabled/>
+                        <label for="customSwitch1" class="custom-control-label"></label>
+                    </div>
                 </td>
                 <td>
                     @{
