--- a/StaffFrontend/Views/Product/Index.cshtml
+++ b/StaffFrontend/Views/Product/Index.cshtml
@@ -10,7 +10,7 @@
 <p>
     <a href="/products/new">Create New</a>
 </p>
-<table class="table">
+<table class="table table-dark">
     <thead>
         <tr>
             <th>
