--- a/StaffFrontend/Views/Review/Details.cshtml
+++ b/StaffFrontend/Views/Review/Details.cshtml
@@ -33,7 +33,10 @@
             @Html.DisplayNameFor(model => model.hidden)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.hidden)
+            <div class="custom-control custom-switch">
+                <input id="customSwitch1" type="checkbox" class="custom-control-input" asp-for="@Model.hidden" disabled />
+                <label for="customSwitch1" class="custom-control-label"></label>
+            </div>
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.productId)
