--- a/StaffFrontend/Views/Suppliers/Index.cshtml
+++ b/StaffFrontend/Views/Suppliers/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<table class="table table-dark">
     <thead>
         <tr>
             <th>
@@ -49,9 +49,15 @@
                 @Html.DisplayFor(modelItem => item.SupplierContactNumber)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @{/* 
+                @Html.ActionLink("Edit", "Edit", new {  id=item.PrimaryKey  }) |
+                @Html.ActionLink("Details", "Details", new {  id=item.PrimaryKey  }) |
+                @Html.ActionLink("Delete", "Delete", new {  id=item.PrimaryKey  })
+                */}
+
+                <a href="/Suppliers/Edit/@item.SupplierId">Edit</a> |
+                <a href="/Suppliers/@item.SupplierId">View</a> |
+                <a href="/Suppliers/Delete/@item.SupplierId">Delete</a>
             </td>
         </tr>
 }
