Updated Product to have link to reviews. Updated Product listing to have list of reviews. Updated link to reviews

--- a/StaffFrontend/Views/Product/Index.cshtml
+++ b/StaffFrontend/Views/Product/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<StaffFrontend.Models.Product>
+﻿@model IEnumerable<StaffFrontend.Models.Product.Product>
 
 @{
     ViewData["Title"] = "View";
