--- a/StaffFrontend/Views/Product/Details.cshtml
+++ b/StaffFrontend/Views/Product/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model StaffFrontend.Models.Product
+﻿@model StaffFrontend.Models.Product.ProductDetailsDTO
 
 @{
     ViewData["Title"] = "View";
@@ -12,41 +12,57 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ID)
+            @Html.DisplayNameFor(model => model.product.ID)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ID)
+            @Html.DisplayFor(model => model.product.ID)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.product.Name)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.product.Name)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
+            @Html.DisplayNameFor(model => model.product.Description)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Description)
+            @Html.DisplayFor(model => model.product.Description)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
+            @Html.DisplayNameFor(model => model.product.Price)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Price)
+            @Html.DisplayFor(model => model.product.Price)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Available)
+            @Html.DisplayNameFor(model => model.product.Available)
         </dt>
         <dd class="col-sm-10">
             <div class="custom-control custom-switch">
-                <input id="customSwitch1" type="checkbox" class="custom-control-input" asp-for="@Model.Available" disabled />
+                <input id="customSwitch1" type="checkbox" class="custom-control-input" asp-for="@Model.product.Available" disabled />
                 <label for="customSwitch1" class="custom-control-label"></label>
             </div>
         </dd>
     </dl>
 </div>
 <div>
-    <a href="/products/edit/@Model.ID">Edit</a> |
+    <h4>Reviews</h4>
+    <hr />
+    @foreach (Review review in Model.reviews)
+    {
+        <dl class="row">
+            <dt class="col-sm-2">
+                @Html.DisplayFor(model => review.userName)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => review.reviewContent)
+            </dd>
+        </dl>
+    }
+</div>
+<div>
+    <a href="/reviews/@Model.product.ID">View Reviews</a> |
+    <a href="/products/edit/@Model.product.ID">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
