Added view for creating new restock

--- a/StaffFrontend/Views/Restock/Index.cshtml
+++ b/StaffFrontend/Views/Restock/Index.cshtml
@@ -35,7 +35,7 @@
             </td>
             <td>
                 <a href="/restock/orders?supplierid=@item.supplierID">View orders</a> |
-                <a href="/restock/orders/@item.supplierID/new">Create order</a>
+                <a href="/restock/create/@item.supplierID">Create order</a>
             </td>
         </tr>
 }
