--- a/StaffFrontend/Views/Customer/Index.cshtml
+++ b/StaffFrontend/Views/Customer/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<StaffFrontend.Models.Customer>
+﻿@model IEnumerable<StaffFrontend.Models.Customers.Customer>
 
 @{
     ViewData["Title"] = "Index";
