--- a/StaffFrontend/Views/Customer/Details.cshtml
+++ b/StaffFrontend/Views/Customer/Details.cshtml
@@ -51,6 +51,32 @@
             </div>
         </dd>
     </dl>
+    <hr />
+
+    <h4>Reviews</h4>
+    <hr />
+    @if (Model.Reviews.Count() != 0)
+    {
+        @foreach (Review review in Model.Reviews)
+        {
+            <dl class="row">
+                <dt class="col-sm-2">
+                    @Html.DisplayFor(model => review.productId)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => review.reviewContent)
+                </dd>
+            </dl>
+        }
+    }
+    else
+    {
+        <dl class="row">
+            <dt class="col-sm-10">
+                This user has not reviewed any product
+            </dt>
+        </dl>
+    }
 </div>
 <div>
     <a href="/customers/edit/@Model.Customer.id">Edit</a> |
