--- a/StaffFrontend/Views/Product/Details.cshtml
+++ b/StaffFrontend/Views/Product/Details.cshtml
@@ -55,7 +55,7 @@
         {
             <dl class="row">
                 <dt class="col-sm-2">
-                    @Html.DisplayFor(model => review.userName)
+                    <a href="/customers/view/@review.userId">@Html.DisplayFor(model => review.userName)</a>
                 </dt>
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => review.reviewContent)
