Added missing data to views

--- a/StaffFrontend/Views/Product/Create.cshtml
+++ b/StaffFrontend/Views/Product/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="View">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -28,9 +28,15 @@
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Available" class="control-label"></label>
-                <input asp-for="Available" class="form-control" />
-                <span asp-validation-for="Available" class="text-danger"></span>
+                <label asp-for="Supply" class="control-label"></label>
+                <input asp-for="Supply" class="form-control" />
+                <span asp-validation-for="Supply" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <div class="custom-control custom-switch">
+                    <input id="customSwitch1" type="checkbox" class="custom-control-input" asp-for="Available" />
+                    <label for="customSwitch1" class="custom-control-label">@Html.DisplayNameFor(model => model.Available)</label>
+                </div>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
