Fixed variables to match incoming data

--- a/StaffFrontend/Views/Restock/Create.cshtml
+++ b/StaffFrontend/Views/Restock/Create.cshtml
@@ -23,9 +23,9 @@
                 <span asp-validation-for="products" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="restock.Qty" class="control-label"></label>
-                <input asp-for="restock.Qty" class="form-control" />
-                <span asp-validation-for="restock.Qty" class="text-danger"></span>
+                <label asp-for="restock.Gty" class="control-label"></label>
+                <input asp-for="restock.Gty" class="form-control" />
+                <span asp-validation-for="restock.Gty" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
