--- a/StaffFrontend/Views/Restock/Process.cshtml
+++ b/StaffFrontend/Views/Restock/Process.cshtml
@@ -11,10 +11,10 @@
 <div class="row">
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
+            @Html.DisplayNameFor(model => model.RestockId)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Id)
+            @Html.DisplayFor(model => model.RestockId)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.AccountName)
@@ -29,10 +29,10 @@
             @Html.DisplayFor(model => model.ProductID)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Qty)
+            @Html.DisplayNameFor(model => model.Gty)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Qty)
+            @Html.DisplayFor(model => model.Gty)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ProductName)
