--- a/StaffFrontend/Views/Product/Delete.cshtml
+++ b/StaffFrontend/Views/Product/Delete.cshtml
@@ -47,7 +47,7 @@
         </dd>
     </dl>
 
-    <form asp-action="View">
+    <form asp-action="Delete">
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
