--- a/StaffFrontend/Views/Product/Details.cshtml
+++ b/StaffFrontend/Views/Product/Details.cshtml
@@ -69,6 +69,9 @@
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => review.reviewContent)
                 </dd>
+                <dd class="col-sm-2">
+                    <a href="/reviews/hide/@review.reviewId?url=/products/view/@Model.product.ID">Hide Review</a>
+                </dd>
             </dl>
         }
     }
