--- a/StaffFrontend/Views/Product/Details.cshtml
+++ b/StaffFrontend/Views/Product/Details.cshtml
@@ -66,11 +66,12 @@
                 <dt class="col-sm-2">
                     <a href="/customers/view/@review.userId">@Html.DisplayFor(model => review.userName)</a>
                 </dt>
-                <dd class="col-sm-10">
+                <dd class="col-sm-8">
                     @Html.DisplayFor(model => review.reviewContent)
                 </dd>
                 <dd class="col-sm-2">
-                    <a href="/reviews/hide/@review.reviewId?url=/products/view/@Model.product.ID">Hide Review</a>
+                    <a href="/reviews/hide/@review.reviewId?url=/products/view/@Model.product.ID">Hide Review</a> |
+                    <a href="/reviews/view/@review.reviewId">Details</a>
                 </dd>
             </dl>
         }
