Added show hidden reviews in index

--- a/StaffFrontend/Views/Review/Details.cshtml
+++ b/StaffFrontend/Views/Review/Details.cshtml
@@ -61,5 +61,5 @@
     {
         <a href="/reviews/hide/@Model.reviewId?url=/reviews/view/@Model.reviewId">Hide Review</a>
     }
-    <a href="/reviews/@Model.productId">Back to List</a>
+    | <a href="/reviews/@Model.productId">Back to List</a>
 </div>
