Added supply info to product details

--- a/StaffFrontend/Views/Product/Details.cshtml
+++ b/StaffFrontend/Views/Product/Details.cshtml
@@ -44,6 +44,12 @@
                 <label for="customSwitch1" class="custom-control-label"></label>
             </div>
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.product.Supply)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.product.Supply)
+        </dd>
     </dl>
 </div>
 <div>
